--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "rollup": "^4.9.6",
     "source-map-js": "^1.0.2",
     "svelte-hmr": "^0.15.3",
+    "svelte-sound": "^0.6.0",
     "vitefu": "^0.2.5"
   },
   "keywords": [],
