--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "dev:both": "concurrently \"npm run dev\" \"node server.js\""
-  },  
+  },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "concurrently": "^8.2.2",
@@ -20,6 +20,7 @@
   "dependencies": {
     "acorn": "^8.11.3",
     "aria-query": "^5.3.0",
+    "axios": "^1.6.7",
     "axobject-query": "^4.0.0",
     "code-red": "^1.0.4",
     "cors": "^2.8.5",
