--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "esbuild": "^0.19.12",
     "estree-walker": "^3.0.3",
     "express": "^4.18.2",
+    "html-entities": "^2.4.0",
     "is-reference": "^3.0.2",
     "kleur": "^4.1.5",
     "locate-character": "^3.0.0",
