--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "description": "This template should help get you started developing with Svelte in Vite.",
   "main": "svelte.config.js",
   "dependencies": {
+    "@trivia-api/fetch": "^1.37.0",
     "acorn": "^8.11.3",
     "aria-query": "^5.3.0",
     "axios": "^1.6.7",
@@ -32,6 +33,7 @@
     "estree-walker": "^3.0.3",
     "express": "^4.18.2",
     "html-entities": "^2.4.0",
+    "i": "^0.3.7",
     "is-reference": "^3.0.2",
     "kleur": "^4.1.5",
     "locate-character": "^3.0.0",
@@ -40,6 +42,7 @@
     "ms": "^2.1.2",
     "mysql": "^2.18.1",
     "nanoid": "^3.3.7",
+    "npm": "^10.4.0",
     "periscopic": "^3.1.0",
     "picocolors": "^1.0.0",
     "postcss": "^8.4.33",
