--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"mysql": "^2.18.1",
+		"svelte-inline-modal": "^1.1.8",
 		"svelte-sound": "^0.6.0"
 	}
 }
