--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"type": "module",
 	"dependencies": {
 		"@trivia-api/fetch": "^1.12.0",
+		"axios": "^1.6.7",
 		"concurrently": "^8.2.2",
 		"cors": "^2.8.5",
 		"express": "^4.18.2",
