--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"svelte": "^4.2.7",
+		"sveltekit-superforms": "^2.6.2",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
@@ -26,6 +27,8 @@
 		"mysql": "^2.18.1",
 		"pnpm": "^8.15.4",
 		"svelte-simple-modal": "^1.6.2",
-		"svelte-sound": "^0.6.0"
+		"svelte-sound": "^0.6.0",
+		"zo": "^0.0.2",
+		"zod": "^3.22.4"
 	}
 }
