--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"prisma": "^5.10.2",
 		"svelte": "^4.2.7",
 		"sveltekit-superforms": "^2.6.2",
 		"vite": "^5.0.3",
@@ -20,6 +21,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@prisma/client": "^5.10.2",
 		"@trivia-api/fetch": "^1.12.0",
 		"axios": "^1.6.7",
 		"concurrently": "^8.2.2",
