--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"lucia": "^3.0.1",
 		"prisma": "^5.10.2",
 		"svelte": "^4.2.7",
 		"sveltekit-superforms": "^2.6.2",
@@ -21,6 +22,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@lucia-auth/adapter-prisma": "^4.0.0",
 		"@prisma/client": "^5.10.2",
 		"@trivia-api/fetch": "^1.12.0",
 		"axios": "^1.6.7",
@@ -28,6 +30,7 @@
 		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"mysql": "^2.18.1",
+		"oslo": "^1.1.3",
 		"pnpm": "^8.15.4",
 		"svelte-simple-modal": "^1.6.2",
 		"svelte-sound": "^0.6.0",
