--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@tailwindcss/typography": "^0.5.10",
+		"autoprefixer": "^10.4.18",
+		"daisyui": "^4.7.3",
 		"depcheck": "^1.4.7",
+		"postcss": "^8.4.35",
 		"prisma": "^5.10.2",
 		"svelte": "^4.2.7",
-		"sveltekit-superforms": "^2.6.2",
+		"sveltekit-superforms": "^2.8.1",
+		"tailwindcss": "^3.4.1",
 		"vite": "^5.0.3",
 		"zod": "^3.22.4"
 	},
@@ -24,6 +29,8 @@
 	"dependencies": {
 		"@prisma/client": "^5.10.2",
 		"@trivia-api/fetch": "^1.12.0",
+		"axios": "^1.6.7",
+		"bcrypt": "^5.1.1",
 		"concurrently": "^8.2.2",
 		"mysql": "^2.18.1",
 		"oslo": "^1.1.3",
