--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
 		"autoprefixer": "^10.4.18",
 		"daisyui": "^4.7.3",
 		"depcheck": "^1.4.7",
-		"postcss": "^8.4.36",
-		"prisma": "^5.10.2",
+		"postcss": "^8.4.37",
+		"prisma": "^5.11.0",
 		"svelte": "^4.2.7",
 		"sveltekit-superforms": "^2.6.2",
 		"tailwindcss": "^3.4.1",
@@ -34,6 +34,7 @@
 		"concurrently": "^8.2.2",
 		"mysql": "^2.18.1",
 		"oslo": "^1.1.3",
+		"prisma-client": "^0.0.0",
 		"svelte-sound": "^0.6.0"
 	}
 }
